@@ -53,6 +53,7 @@ public interface DeviceCommandService {
    
    /**
     * Load by id.
+    * By default, do not load the device eagerly.
     * 
     * @param id the id
     * 
@@ -60,6 +61,16 @@ public interface DeviceCommandService {
     */
    DeviceCommand loadById(long id);
    
+   /**
+    * Load by id.
+    * 
+    * @param id the id
+    * @param loadDeviceEagerly indicates that the device associated with this command and all its relationships need to be eagerly loaded with the command.
+    * 
+    * @return the device command
+    */
+   DeviceCommand loadById(long id, boolean loadDeviceEagerly);
+
    /**
     * Delete command.
     * 
